--- a/hugo.toml
+++ b/hugo.toml
@@ -50,7 +50,7 @@ phone = "+ (387)"
 [params.social]
 facebook = ""
 twitter = ""
-github = "https://github.com/ecogains/test"
+github = "https://github.com/ecogains/"
 
 [params]
 
