--- a/data/home.yml
+++ b/data/home.yml
@@ -1,6 +1,6 @@
 ---
 enable: true
-title: Vaše je da reciklirate, a na nama je da vi profitirate
+title: Vaše je da reciklirate, a na nama je da vi profitirate!
 caption: EcoGains slogan
 description: Korišćenjem EcoGains aplikacije, možete zaraditi novac recikliranjem otpada. Ostanite u toku sa novostima i budite među prvima koji će preuzeti aplikaciju.
 buttonName: Uskoro na
