--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -75,20 +75,16 @@ jobs:
         uses: actions/deploy-pages@v4
 
   # Netlify deployment job
-  deploy-netlify:
-    name: netlify
-    needs: build
-    runs-on:  ubuntu-latest
-    steps:
-      - name: Download public directory
-        uses: actions/download-artifact@v3
-        with:
-          name: public
-          path: public/
-      - name: Publish
-        uses: netlify/actions/cli@master
-        with:
-          args: deploy -p --dir=public
-        env:
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+# Netlify deployment job
+deploy-netlify:
+  name: netlify
+  needs: build
+  runs-on: ubuntu-latest
+  steps:
+    - name: Publish to Netlify
+      uses: netlify/actions/cli@master
+      with:
+        args: deploy --prod --dir=./public
+      env:
+        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
