--- a/data/home.yml
+++ b/data/home.yml
@@ -2,7 +2,7 @@
 enable: true
 title: Vaše je da reciklirate, a na nama je da vi profitirate!
 caption: EcoGains slogan
-description: Korišćenjem EcoGains aplikacije, možete zaraditi novac recikliranjem otpada. Ostanite u toku sa novostima i budite među prvima koji će preuzeti aplikaciju.
+description: Korišćenjem EcoGains aplikacije, možete biti nagrađeni za vaše reciklažne navike. Ostanite u toku sa novostima i budite među prvima koji će preuzeti aplikaciju.
 buttonName: Uskoro na
 button2text: Google Play
 image: images/home/ecogains_home_transparent.png
